# termi-music-player

./: Cargo.toml  README.md
src/: constance.rs  engine.rs  main.rs  music.rs  player.rs  ui.rs
